--- a/anime/top/html1.html
+++ b/anime/top/html1.html
@@ -27,7 +27,7 @@
 
 <meta name="referrer" content="default"><link rel="manifest" href="/manifest.json">
 
-<meta name='csrf_token' content='e8d3086ff496be33199b1cf7818c3ed5ac2ba2d3'><link rel="stylesheet" type="text/css" href="https://myanimelist.cdn-dena.com/static/assets/css/pc/style-abc038a5d1.css" />
+<meta name='csrf_token' content='63ec4d0aa0f4749b1917d0d8f05ddb0090731781'><link rel="stylesheet" type="text/css" href="https://myanimelist.cdn-dena.com/static/assets/css/pc/style-abc038a5d1.css" />
 
 <script type="text/javascript" src="https://myanimelist.cdn-dena.com/static/assets/js/pc/header-69110ae9e9.js"></script>
 <script type="text/javascript" src="https://myanimelist.cdn-dena.com/static/assets/js/pc/all-8978cc1861.js"
@@ -65,11 +65,11 @@ data-ms="true">
     
         <div class="wrapper"><div id="headerSmall"><a href="/" class="link-mal-logo">MyAnimeList.net</a>
 
-<a href="https://mtb7.myanimelist.net/index.html"
+<a href="https://myanimelist.net/store"
      class="banner-header-anime-straming" target="_blank">
-    <img src="https://myanimelist.cdn-dena.com/images/mtb/header_banner_vol7_with_application_period.png" width="250" height="36"
-         srcset="https://myanimelist.cdn-dena.com/images/mtb/header_banner_vol7_with_application_period.png 1x, https://myanimelist.cdn-dena.com/images/mtb/header_banner_vol7_with_application_period@2x.png 2x"
-         alt="MangaTranslationBattle vol7 - Application Period 2018/11/05" title="MangaTranslationBattle vol7 - Application Period 2018/11/05">
+    <img src="https://myanimelist.cdn-dena.com/images/manga_store/banner/banner-manga-store.png?v=1" width="250" height="36"
+         srcset="https://myanimelist.cdn-dena.com/images/manga_store/banner/banner-manga-store.png?v=1 1x, https://myanimelist.cdn-dena.com/images/manga_store/banner/banner-manga-store@2x.png?v=1 2x"
+         alt="Manga Store - MyAnimeList" title="Manga Store - MyAnimeList">
   </a>
 <div id="header-menu" ><div class="header-menu-login"><a class="btn-mal-service"
              href="https://myanimelist.net/membership?_location=mal_h_u">Hide Ads</a><a class="btn-login" href="https://myanimelist.net/login.php?from=%2Ftopanime.php%3Flimit%3D50" id="malLogin">Login</a><a class="btn-signup" href="https://myanimelist.net/register.php?from=%2Ftopanime.php%3Flimit%3D50">Sign Up</a></div></div></div>  <div id="menu" class="">
